--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DynamicLinkExample</string>
+    <string name="nameDeveloper">Edwin Alfredo Lara Lévano</string>
+    <string name="charge">Desarrollador Android</string>
+    <string name="numberPhone">948154759</string>
 </resources>
